--- a/projects/fuse-rust.html
+++ b/projects/fuse-rust.html
@@ -4,23 +4,23 @@
 		<meta content="width=device-width" name="viewport">
 		
 		<link href="../_app/immutable/assets/0.5ab10349.css" rel="stylesheet">
-		<link href="../_app/immutable/assets/6.1173c233.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/6.77764983.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/section.907b0a35.css" rel="stylesheet">
-		<link href="../_app/immutable/entry/start.5fe2b293.js" rel="modulepreload">
+		<link href="../_app/immutable/entry/start.58d695d0.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/scheduler.d96b1147.js" rel="modulepreload">
-		<link href="../_app/immutable/chunks/singletons.7b2ed50e.js" rel="modulepreload">
+		<link href="../_app/immutable/chunks/singletons.9063147f.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.0d30a2cd.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/control.f5b05b5f.js" rel="modulepreload">
-		<link href="../_app/immutable/entry/app.57c1fb57.js" rel="modulepreload">
+		<link href="../_app/immutable/entry/app.8ccf764f.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/preload-helper.41c905a7.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.041c6ff6.js" rel="modulepreload">
-		<link href="../_app/immutable/nodes/0.55596aa7.js" rel="modulepreload">
+		<link href="../_app/immutable/nodes/0.9cf15bc6.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/Icon.cff3392e.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/spread.8a54911c.js" rel="modulepreload">
-		<link href="../_app/immutable/chunks/stores.ad2785e7.js" rel="modulepreload">
+		<link href="../_app/immutable/chunks/stores.5007c71d.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.96a48171.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/context.31d84fd2.js" rel="modulepreload">
-		<link href="../_app/immutable/nodes/6.b1f206d1.js" rel="modulepreload">
+		<link href="../_app/immutable/nodes/6.1058766c.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/ProjectData.86be1594.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.4240cad6.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/section.ef860109.js" rel="modulepreload">
@@ -36,7 +36,7 @@ it could suplement the use case for Rust in building desktop/native applications
 similarity. It also contains an opt-in multi-threaded implementation using <a href="https://github.com/crossbeam-rs/crossbeam" rel="nofollow">crossbeam</a>.</p> <p data-svelte-h="svelte-h9xsfq">Additionally I included an actual <a href="https://github.com/Blakeinstein/fuse-rust/tree/master/examples/search-bar" rel="nofollow">GUI example</a> using
 <a href="https://github.com/iced-rs/iced" rel="nofollow">iced-rs</a>.</p> <h2 data-svelte-h="svelte-1anz3rk">Fun Facts</h2> <ul data-svelte-h="svelte-17yphbl"><li>I learnt about multibyte characters for the first time here.</li> <li>I learnt about the concept of graphemes in swift programming language.</li> <li>I learnt about the bitap algorithm and how it can be used to calculate text similarity.</li></ul></div></div></div> </section> </main> 
 			
-			<script>{__sveltekit_1mkl9e9={base:new URL("..",location).pathname.slice(0,-1),env:{}};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("../_app/immutable/entry/start.5fe2b293.js"),import("../_app/immutable/entry/app.57c1fb57.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,6],data:t,form:null,error:null})})}
+			<script>{__sveltekit_yj5ad5={base:new URL("..",location).pathname.slice(0,-1),env:{}};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("../_app/immutable/entry/start.58d695d0.js"),import("../_app/immutable/entry/app.8ccf764f.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,6],data:t,form:null,error:null})})}
 </script>
 		
 		</div>
